# Intranet

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IntranetConfig.h  IntranetConfig.h.in  Makefile  README.md  cmake_install.cmake  crow_all.h  intranet  main.cpp
.sass-cache/474d799f44611cb9e9d230c6fc59d54fcbd0eb1d/: global.scssc
.sass-cache/72ab682f53a4573a82b3cd7c55f8b357a759ad39/: global.scssc
pylibs/: crow_analytics.py
pylibs/private-keys/: Intranet-Dashboard-7b5d56f69551.json
static/css/: global.css  global.css.map
static/js/: navigation.js  representatives.js
static/scss/: global.scss
views/: dashboard.html  navigation.html  representatives.html
